# craftec

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  docker-entrypoint.sh
.claude/: feature-progress.md
.github/workflows/: ci.yml
crates/craftec-com/: Cargo.toml
crates/craftec-com/src/: agent.rs  error.rs  host.rs  lib.rs  runtime.rs  scheduler.rs
crates/craftec-crypto/: Cargo.toml
crates/craftec-crypto/src/: hash.rs  hommac.rs  lib.rs  sign.rs
crates/craftec-health/: Cargo.toml
crates/craftec-health/src/: coordinator.rs  error.rs  lib.rs  repair.rs  scanner.rs  tracker.rs
crates/craftec-net/: Cargo.toml
crates/craftec-net/src/: connection.rs  dht.rs  endpoint.rs  error.rs  lib.rs  pending.rs  pool.rs  swim.rs
crates/craftec-node/: Cargo.toml
crates/craftec-node/src/: cli.rs  event_bus.rs  handler.rs  main.rs  node.rs  pending.rs  piece_store.rs  rpc.rs  shutdown.rs
crates/craftec-obj/: Cargo.toml
crates/craftec-obj/src/: bloom.rs  cache.rs  error.rs  lib.rs  shard.rs  store.rs
crates/craftec-rlnc/: Cargo.toml
crates/craftec-rlnc/src/: decoder.rs  encoder.rs  engine.rs  error.rs  gf256.rs  lib.rs  recoder.rs
crates/craftec-sql/: Cargo.toml
crates/craftec-sql/src/: commit.rs  database.rs  error.rs  lib.rs  rpc_write.rs  schema.rs
crates/craftec-tests/: Cargo.toml
crates/craftec-tests/src/: lib.rs
crates/craftec-tests/tests/: multi_node.rs  scale_scenarios.rs  subsystem_integration.rs
crates/craftec-types/: Cargo.toml
crates/craftec-types/src/: cid.rs  config.rs  error.rs  event.rs  hlc.rs  identity.rs  lib.rs  piece.rs  wire.rs
crates/craftec-vfs/: Cargo.toml
crates/craftec-vfs/src/: error.rs  lib.rs  page_cache.rs  page_index.rs  snapshot.rs  vfs.rs
docs/: DEVELOPMENT.md  ERRATA_v3.3.md  IMPLEMENTATION_GUIDE.md  SPEC_SYSTEM_PLAN.md  TESTING.md  craftec_full_audit.md  craftec_sequence_timing_audit.md  craftec_technical_foundation.md
tests/docker/: run_all.sh
