[package]
name = "craftec-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
craftec-types = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
