[package]
name = "craftec-health"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
craftec-types = { workspace = true }
craftec-crypto = { workspace = true }
craftec-obj = { workspace = true }
craftec-rlnc = { workspace = true }
craftec-net = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
