[package]
name = "craftec-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
craftec-types = { workspace = true }
craftec-crypto = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
