[package]
name = "craftec-rlnc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
craftec-types = { workspace = true }
craftec-crypto = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
