[package]
name = "craftec-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
craftec-types  = { path = "../craftec-types" }
craftec-crypto = { path = "../craftec-crypto" }
craftec-rlnc   = { path = "../craftec-rlnc" }
craftec-obj    = { path = "../craftec-obj" }
craftec-vfs    = { path = "../craftec-vfs" }
craftec-sql    = { path = "../craftec-sql" }
craftec-health = { path = "../craftec-health" }
craftec-net    = { path = "../craftec-net" }
craftec-com    = { path = "../craftec-com" }
postcard       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
wat = { workspace = true }
